--- a/components/Unit/tabs/OverviewTab.module.css
+++ b/components/Unit/tabs/OverviewTab.module.css
@@ -78,6 +78,7 @@
 
 .unitOverviewCardWide {
   grid-column: 1 / -1;
+  margin-bottom: 2rem;
 }
 
 .unitOverviewCardPrimary :global(li) {
